ajout des liens

--- a/index.html
+++ b/index.html
@@ -42,8 +42,15 @@
 
     <h2>Coordonnées</h2>
     <p>
-      Teléphone: 07 83 72 21 79 <br />
-      <br />Adresse e-mail: etan.heitzler@gmail.com<br />
+      Teléphone: <a href="tel:+330783722179"></a>+33 07 83 72 21 79 <br />
+      <br />Adresse e-mail:
+      <a href="mailto:etan.heitzler@gmail.com"> etan.heitzler@gmail.com</a>
+      <a
+        href="http://mailto:etan.heitzler@gmail.com"
+        target="_blank"
+        rel="noopener noreferrer"
+      ></a>
+      <br />
       <br />11 rue des cornouillers <br />
       <br />Carte postal: 27640 Breuilpont
     </p>
@@ -78,7 +85,7 @@
     <h2>Formations</h2>
 
     <h3>Bachelor chef de propjets digitaux 2023-2026</h3>
-    <p>Normandie Web School</p>
+    <p><a href="https://normandiewebschool.fr">Normandie Web School</a></p>
     <br />
     <ul>
       <li>Communication Web</li>
