ajout de section

--- a/index.html
+++ b/index.html
@@ -39,79 +39,80 @@
     </p>
 
     <!-- Section : coordonnées -->
-
-    <h2>Coordonnées</h2>
-    <p>
-      Teléphone: <a href="tel:+330783722179"></a>+33 07 83 72 21 79 <br />
-      <br />Adresse e-mail:
-      <a href="mailto:etan.heitzler@gmail.com"> etan.heitzler@gmail.com</a>
-      <a
-        href="http://mailto:etan.heitzler@gmail.com"
-        target="_blank"
-        rel="noopener noreferrer"
-      ></a>
-      <br />
-      <br />11 rue des cornouillers <br />
-      <br />Carte postal: 27640 Breuilpont
-    </p>
-
+    <section id="contact">
+      <h2>Coordonnées</h2>
+      <p>
+        Teléphone: <a href="tel:+330783722179"></a>+33 07 83 72 21 79 <br />
+        <br />Adresse e-mail:
+        <a href="mailto:etan.heitzler@gmail.com"> etan.heitzler@gmail.com</a>
+        <a
+          href="http://mailto:etan.heitzler@gmail.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        ></a>
+        <br />
+        <br />11 rue des cornouillers <br />
+        <br />Carte postal: 27640 Breuilpont
+      </p>
+    </section>
     <!-- section: expériences -->
+    <section id="expériences">
+      <h2>Expérience professionelles</h2>
 
-    <h2>Expérience professionelles</h2>
+      <h3>Stage-Graphiste Seritex'Style 2023</h3>
+      <p>4 semaines: création de mon sweet</p>
 
-    <h3>Stage-Graphiste Seritex'Style 2023</h3>
-    <p>4 semaines: création de mon sweet</p>
+      <h3>Stage-Graphiste ACR 2023</h3>
+      <p>4 semaines: création d'un calendrier</p>
 
-    <h3>Stage-Graphiste ACR 2023</h3>
-    <p>4 semaines: création d'un calendrier</p>
+      <h3>Stage-Graphiste Com'une image 2022</h3>
+      <p>a semaines: création de mon CV</p>
 
-    <h3>Stage-Graphiste Com'une image 2022</h3>
-    <p>a semaines: création de mon CV</p>
+      <h3>Stage-Graphiste SDIS 27 2022</h3>
+      <p>
+        (Service Départemental d'Incendie et de Secours) <br />4 semaines:
+        visuels vigilances
+      </p>
 
-    <h3>Stage-Graphiste SDIS 27 2022</h3>
-    <p>
-      (Service Départemental d'Incendie et de Secours) <br />4 semaines: visuels
-      vigilances
-    </p>
+      <h3>Stage-Graphiste Mairie de Louviers 2020</h3>
+      <p>3 semaines: création de visuels pour le guide des associations</p>
 
-    <h3>Stage-Graphiste Mairie de Louviers 2020</h3>
-    <p>3 semaines: création de visuels pour le guide des associations</p>
-
-    <h3>Stage-Découvert ESAT Evreux 2020</h3>
-    <p>Partie impression 3 semaines: entretien de la presse offset</p>
-
+      <h3>Stage-Découvert ESAT Evreux 2020</h3>
+      <p>Partie impression 3 semaines: entretien de la presse offset</p>
+    </section>
     <!-- section: formations -->
+    <section id="formations">
+      <h2>Formations</h2>
 
-    <h2>Formations</h2>
+      <h3>Bachelor chef de propjets digitaux 2023-2026</h3>
+      <p><a href="https://normandiewebschool.fr">Normandie Web School</a></p>
+      <br />
+      <ul>
+        <li>Communication Web</li>
+        <li>Marketing et communication digital</li>
+        <li>Developement Web</li>
+        <li>Communication graphique</li>
+      </ul>
 
-    <h3>Bachelor chef de propjets digitaux 2023-2026</h3>
-    <p><a href="https://normandiewebschool.fr">Normandie Web School</a></p>
-    <br />
-    <ul>
-      <li>Communication Web</li>
-      <li>Marketing et communication digital</li>
-      <li>Developement Web</li>
-      <li>Communication graphique</li>
-    </ul>
+      <h3>Bac pro AMA-CV 2020-2023</h3>
+      <p>(Artisanat du Métier d'Art Communication Visuelle)</p>
 
-    <h3>Bac pro AMA-CV 2020-2023</h3>
-    <p>(Artisanat du Métier d'Art Communication Visuelle)</p>
-
-    <h3>Obtention du dîplome 2023</h3>
-    <p>(mention assez bien)</p>
-
+      <h3>Obtention du dîplome 2023</h3>
+      <p>(mention assez bien)</p>
+    </section>
     <!-- section: compétence et hobbies -->
+    <section id="compétence et hobbies">
+      <h2>Compétence</h2>
+      <p>
+        Maitrise les logiciels Illistrator, PhotoShop, et InDesign <br />Niveaux
+        d'anglais oral B1
+      </p>
 
-    <h2>Compétence</h2>
-    <p>
-      Maitrise les logiciels Illistrator, PhotoShop, et InDesign <br />Niveaux
-      d'anglais oral B1
-    </p>
-
-    <h2>Hobbies</h2>
-    <p>
-      Aime écouter de la musique <br />Joue a des jeux de société <br />Joue
-      également aux jeux vidéo
-    </p>
+      <h2>Hobbies</h2>
+      <p>
+        Aime écouter de la musique <br />Joue a des jeux de société <br />Joue
+        également aux jeux vidéo
+      </p>
+    </section>
   </body>
 </html>
