--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <p>(mention assez bien)</p>
     </section>
     <!-- section: compétence et hobbies -->
-    <section id="compétence et hobbies">
+    <section id="competence_et_hobbies">
       <h2>Compétence</h2>
       <p>
         Maitrise les logiciels Illistrator, PhotoShop, et InDesign <br />Niveaux
