--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mon CV</title>
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
 
   <!-- body : element a afficher dans ma page -->
