derniere ligne droite

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Roboto:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -46,7 +46,6 @@
   <!-- body : element a afficher dans ma page -->
   <body>
     <h1><strong>Etan Heitzler</strong></h1>
-    <img src="/assets/images/jeux.jpg" alt="" />
     <p>
       Graphiste en devenir <br />
       recherche d'un stage
