--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- body : element a afficher dans ma page -->
   <body>
     <h1><strong>Etan Heitzler</strong></h1>
-
+    <img class="logo" src="/assets/images/logo-cv.svg" height="200" />
     <p>
       Graphiste en devenir <br />
       recherche d'un stage
