--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
       <h2>Hobbies</h2>
       <p>
-        Aime écouter de la musique <br />Joue a des jeux de société <br />Joue
-        également aux jeux vidéo
+        Aime écouter de la musique
+        <br />Joue a des jeux de société <br />Joue également aux jeux vidéo
       </p>
     </section>
   </body>
