ajout des planete

--- a/index.html
+++ b/index.html
@@ -45,16 +45,21 @@
 
   <!-- body : element a afficher dans ma page -->
   <body>
-    <h1><strong>Etan Heitzler</strong></h1>
-    <img class="logo" src="/assets/images/logo-cv.svg" height="200" />
-    <p>
-      Graphiste en devenir <br />
-      recherche d'un stage
-    </p>
+    <header class="header">
+      <h1><strong>Etan Heitzler</strong></h1>
+      <img class="logo" src="/assets/images/logo-cv.svg" height="200" />
+      <p>
+        Graphiste en devenir <br />
+        recherche d'un stage
+      </p>
+    </header>
 
     <!-- Section : coordonnées -->
     <section id="contact">
-      <h2>Coordonnées</h2>
+      <header class="section-header">
+        <h2>Coordonnées</h2>
+        <img src="/assets/images/planete-coordonees.svg" height="80" />
+      </header>
       <p>
         Teléphone: <a href="tel:+330783722179"></a>+33 07 83 72 21 79 <br />
         <br />Adresse e-mail:
@@ -71,7 +76,10 @@
     </section>
     <!-- section: expériences -->
     <section id="expériences">
-      <h2>Expérience professionelles</h2>
+      <header class="section-header">
+        <h2>Expérience professionelles</h2>
+        <img src="/assets/images/planete-experience.svg" height="90" />
+      </header>
 
       <h3>Stage-Graphiste Seritex'Style 2023</h3>
       <p>4 semaines: création de mon sweet</p>
@@ -96,7 +104,10 @@
     </section>
     <!-- section: formations -->
     <section id="formations">
-      <h2>Formations</h2>
+      <header class="section-header">
+        <h2>Formations</h2>
+        <img src="/assets/images/planete-etudes.svg" height="85" />
+      </header>
 
       <h3>Bachelor chef de propjets digitaux 2023-2026</h3>
       <p><a href="https://normandiewebschool.fr">Normandie Web School</a></p>
@@ -115,13 +126,20 @@
     </section>
     <!-- section: compétence et hobbies -->
     <section id="competence_et_hobbies">
-      <h2>Compétence</h2>
+      <header class="section-header">
+        <h2>Compétence</h2>
+        <img src="/assets/images/planete-competences.svg" height="75" />
+      </header>
       <p>
         Maitrise les logiciels Illistrator, PhotoShop, et InDesign <br />Niveaux
         d'anglais oral B1
       </p>
 
-      <h2>Hobbies</h2>
+      <header class="section-header">
+        <h2>Hobbies</h2>
+        <img src="/assets/images/planete-hobbies.svg" height="70" />
+      </header>
+
       <p>
         Aime écouter de la musique
         <br />Joue a des jeux de société <br />Joue également aux jeux vidéo
