--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <header class="header">
       <h1><strong>Etan Heitzler</strong></h1>
-      <img class="logo" src="/assets/images/logo-cv.svg" height="200" />
+      <img class="logo" src="/assets/images/logo-cv.png" height="200" />
       <p>
         Graphiste en devenir <br />
         recherche d'un stage
@@ -58,7 +58,7 @@
     <section id="contact">
       <header class="section-header">
         <h2>Coordonnées</h2>
-        <img src="/assets/images/planete-coordonees.svg" height="80" />
+        <img src="/assets/images/planete-coordonees.png" height="80" />
       </header>
       <p>
         Teléphone: <a href="tel:+330783722179"></a>+33 07 83 72 21 79 <br />
@@ -78,7 +78,7 @@
     <section id="expériences">
       <header class="section-header">
         <h2>Expérience professionelles</h2>
-        <img src="/assets/images/planete-experience.svg" height="90" />
+        <img src="/assets/images/planete-experience.png" height="90" />
       </header>
 
       <h3>Stage-Graphiste Seritex'Style 2023</h3>
@@ -106,7 +106,7 @@
     <section id="formations">
       <header class="section-header">
         <h2>Formations</h2>
-        <img src="/assets/images/planete-etudes.svg" height="85" />
+        <img src="/assets/images/planete-etudes.png" height="85" />
       </header>
 
       <h3>Bachelor chef de propjets digitaux 2023-2026</h3>
@@ -128,7 +128,7 @@
     <section id="competence_et_hobbies">
       <header class="section-header">
         <h2>Compétence</h2>
-        <img src="/assets/images/planete-competences.svg" height="75" />
+        <img src="/assets/images/planete-competences.png" height="75" />
       </header>
       <p>
         Maitrise les logiciels Illistrator, PhotoShop, et InDesign <br />Niveaux
@@ -137,7 +137,7 @@
 
       <header class="section-header">
         <h2>Hobbies</h2>
-        <img src="/assets/images/planete-hobbies.svg" height="70" />
+        <img src="/assets/images/planete-hobbies.png" height="70" />
       </header>
 
       <p>
